IMOD History
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
2/28/11: Converted Squeezevol to Python, added an option to specify expansion
instead of squeezing, and made it adjust origin for a subvolume.

2/28/11: Added & and * as alternatives to F11 (contrast reversal) and F12
(false color) hot keys.

2/28/11: In eTomo fixing a bug where the RotationAngle was not added to the
patch tracking comscript, xcorr_pt.com (in 4.1 FWIW).

2/28/11: 3dmod draws slice lines in Zap and XYZ when PageUp/Down used in
slicer.

2/28/11: Allowed user to exit 3dmod when a loading large montage.

2/28/11: Added an unwrap process to Clip to fix integer data saved with
wraparound.

2/27/11: Fixed a problem with autocontouring when following diagonals or doing
inside contours.

2/27/11: Added standard deviation output to Sumdensity.

2/27/11: Doubled number of model points that can be loaded into Fortran
programs.

2/27/11: Fixed model scaling in sda.

2/26/11: 3dmod -s 0,0 will apply equal intensity scaling to all input files
based on their overall min and max.

2/25/11: Converted Copytomocoms to Python and added INFO outputs when the log
base is set to 32768, and WARNING outputs when it is not set but might need to
be.

2/24/11: Converted splitcombine to Python and made eTomo use it.

2/23/11: IMOD_4-2-15
2/23/11: Temporary fix to splitcombine problem in Win 7.

2/23/11: Clip: extended variance and standard deviation to 2D case within a
single image stack; added scaling option for average/sd/variance; added
processes to subtract, multiply, and divide two volumes or add instead of
average multiple volumes; added a truncation operation; added -x and -y
options to set starting and ending input coordinates.  Multiply can be used
to apply a mask to a volume.

2/23/11: Fixed Avgstack to take long filenames and to work with any size of 
file.

2/22/11: Fixed a problem reconnecting to processchunks in the PEET interface.
