@@ -96,6 +96,11 @@ stack with <A HREF = "../man/trimvol.html">trimvol</A>; this is the same
 command used by the Extract File entry in the File menu. 
 This key also brings the Information 
 Window to the front of the display.
+<LI><B>q</B> reports the distance between the current image or model point and
+the position of the mouse.  The two positions and 2D distance between them (in
+the plane of the image) are printed in the Information window. 
+Thus, to measure a distance between two points, click at the first point with
+the left mouse button, move the cursor to the second position, and press Q.
 <LI><B>R</B> resizes the window.  With the rubber band off, the window 
 changes, 
 if possible, to match the size of the entire image at the 
