@@ -32,6 +32,7 @@ N - Create a new contour with a new surface number.
 o - Go to previous object.
 O - Toggle contour open/closed
 p - Go to next object.
+q - Zap & Slicer - Report 2D distance from current point to cursor
 P - Zap - Toggles a mode in which you can shift, rotate, stretch, or scale
 R - Zap - resizes the window.  With the rubber band off, the window 
 Ctrl+R - Raise all 3dmod windows above other windows.
@@ -94,7 +95,7 @@ F7 - Decrease Brightness.
 F8 - Increase Brightness.
 F9 - Select Color map ramp # 1.
 F10 - Cycle through Color map ramps: 1 - 2 - 3 - 4 - 1.
-F11 - Invert Color map.
-F12 - Toggle False Color.
+F11 or & - Invert Color map.
+F12 or * - Toggle False Color.
 
 
