@@ -1,5 +1,8 @@
 IMOD History
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+3/1/11: Added q hot key to Zap and Slicer windows to report distance between
+current image or model point and the mouse cursor.
+
 2/28/11: Converted Squeezevol to Python, added an option to specify expansion
 instead of squeezing, and made it adjust origin for a subvolume.
 
@@ -12,7 +15,7 @@ patch tracking comscript, xcorr_pt.com (in 4.1 FWIW).
 2/28/11: 3dmod draws slice lines in Zap and XYZ when PageUp/Down used in
 slicer.
 
-2/28/11: Allowed user to exit 3dmod when a loading large montage.
+2/28/11: Allowed user to exit 3dmod when loading a large montage.
 
 2/28/11: Added an unwrap process to Clip to fix integer data saved with
 wraparound.
